--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "name": "mavame.github.com",
   "version": "0.0.0",
-  "main": "index.html",
+  "main": "app/index.html",
   "repository": {
     "type": "git",
     "url": "https://github.com/mavame/mavame.github.com.git"
